--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <div class="div-home2">
         <h1 class="h1">Contact</h1>
-        <img src="/Users/simone/Desktop/ProgettoPersonale/assets/services.jpg" alt="" width="20%" height="20%">
+        <img src="./assets/services.jpg" alt="" width="20%" height="20%">
 </div>
         <p class="div-about">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde labore, repellat cupiditate totam reiciendis dicta adipisci incidunt voluptas modi voluptates quibusdam in ex, quos quaerat a ut repudiandae error ullam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, a ex. Nulla molestiae suscipit illo quis, et tempora explicabo sed earum laborum vero ducimus voluptas iste vel veniam quibusdam numquam!</p>
     </div>
